Added strapi impl

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,84 @@
+<!--About sec start-->
+<section class="about-sec" id="about-sec">
+  <div class="about-overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-6 services-area padding-top padding-bottom">
+        <div class="purple-overlay"></div>
+        <div class="row no-gutters wow fadeInLeft">
+          <div class="col-12 col-lg-6 services text-center">
+            <a routerLink="/desarrollos/almaviva">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">ALMAVIVA</h4>
+              </div>
+            </a>
+
+          </div>
+          <div class="col-12 col-lg-6 services text-center">
+            <a routerLink="/desarrollos/terraviva">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">TERRAVIVA</h4>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-lg-6 services text-center">
+            <a routerLink="/desarrollos/dam">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">DAM</h4>
+              </div>
+            </a>
+          </div>
+          <div class="col-12 col-lg-6 services text-center">
+            <a routerLink="/desarrollos/bio">
+              <div class="service-card">
+                <div class="icon-holder">
+                  <i class="lni lni-briefcase"></i>
+                </div>
+                <h4 class="card-heading">ACERCA DE MG</h4>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 about-area padding-top padding-bottom text-center text-lg-left">
+        <div class="about-content wow fadeInRight">
+          <div class="about-inner-content">
+            <h4 class="heading">SOMOS<span class="text-yellow">INVERSIONES INMOBILIARIAS MG</span></h4>
+            <p class="text">
+              En nuestra empresa, nos enfocamos en brindar soluciones personalizadas para satisfacer sus necesidades y
+              objetivos de inversión. Nuestro equipo de expertos en bienes raíces está comprometido en ayudarle a
+              encontrar la mejor propiedad o proyecto de inversión para maximizar su retorno de inversión.
+            </p>
+            <p class="text">
+              En nuestra página, encontrará información detallada sobre nuestras opciones de inversión, nuestras áreas
+              de experiencia, así como los servicios que ofrecemos para ayudarle en el proceso de inversión.
+            </p>
+            <p class="text">
+              Estamos aquí para responder cualquier pregunta que pueda tener y guiarle en su camino hacia la inversión
+              inmobiliaria. Nos enorgullece ofrecer un servicio de alta calidad y esperamos poder trabajar con usted
+              para alcanzar sus objetivos de inversión.
+            </p>
+            <p class="text">
+              ¡Gracias por visitar nuestra página de inversión inmobiliaria y esperamos trabajar juntos en su próximo
+              proyecto de inversión!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--About sec End-->
+
 <!--Blogs section start-->
 <section class="blog-sec" id="blog-sec">
   <div class="left-overlay"></div>
@@ -6,18 +87,18 @@
     <div class="row blog-area">
       <div class="col-12 col-lg-5 d-flex align-items-center text-center text-lg-left">
         <div class="blog-detail wow fadeInLeft">
-          <h4 class="heading text-black">LATEST <span>DESIGN BLOGS</span></h4>
+          <h4 class="heading text-black">MISIÓN</h4>
           <p class="text text-black">
-            Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.
-          </p>
-          <a class="btn anim-btn rounded-pill" href="assets/standard-blog.html">LEARN MORE
-            <span></span><span></span><span></span><span></span>
-          </a>
+            Nuestra misión es proporcionar soluciones inmobiliarias de alta calidad y servicios de inversión a nuestros
+            clientes, a través de una atención personalizada y un enfoque en la excelencia en el servicio al cliente.
+            Nos esforzamos por ser líderes en el mercado inmobiliario, manteniendo altos estándares éticos y de calidad
+            en todas nuestras transacciones. </p>
+
         </div>
       </div>
       <div class="col-12 col-lg-6 offset-lg-1">
         <div class="blog-img wow fadeInRight">
-          <img src="assets/img/blog1.png" alt="blog-img">
+          <img src="https://st.depositphotos.com/2650957/5104/i/600/depositphotos_51049563-stock-photo-mission-button-on-virtual-screen.jpg" alt="blog-img">
         </div>
       </div>
     </div>
@@ -25,4 +106,36 @@
 </section>
 <!--Blogs section end-->
 
+
+<!--testimonial section start-->
+<div class="testimonial-sec padding-top position-relative" id="testimonial-sec">
+  <div class="right-overlay"></div>
+  <div class="container">
+    <div class="testimonial-area padding-top padding-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-5 d-flex justify-content-center align-items-center text-center text-lg-left">
+            <div class="testimonial-details wow fadeInLeft">
+              <h4 class="heading">VISIÓN</h4>
+              <p class="text">
+                Nuestra visión es ser una empresa líder en el mercado inmobiliario, reconocida por su excelencia en el
+                servicio al cliente y su enfoque en las soluciones de inversión personalizadas. Nos esforzamos por
+                mantener relaciones a largo plazo con nuestros clientes y socios, ofreciendo un servicio de calidad y
+                soluciones de inversión innovadoras y rentables para satisfacer las necesidades y expectativas de
+                nuestros clientes. Queremos ser reconocidos por nuestro compromiso con la calidad, la integridad y la
+                innovación en todo lo que hacemos.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 offset-lg-1">
+            <div class="blog-img wow fadeInRight">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQWIXvIErT_u5nWkIU1Cy65Pkh4QGNiiljfEd5kH0V-RvJwUP_dkFQdcl9E1i6E_i9lNs&usqp=CAUhttps://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQWIXvIErT_u5nWkIU1Cy65Pkh4QGNiiljfEd5kH0V-RvJwUP_dkFQdcl9E1i6E_i9lNs&usqp=CAU" alt="blog-img">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--testimonial section end-->
 
