--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,8 +8,13 @@
         <div class="slider-slide">
           <div class="slider-inner-content">
             <h4 class="slide-heading">INVERSIONES <span>INMOBILIARIAS MG</span></h4>
+
             <p class="slide-text">
 
+              ¡Bienvenido/a a nuestra página de inversión inmobiliaria!
+              <br>
+              Estamos encantados de tenerle aquí y brindarle la oportunidad de descubrir nuestras opciones de inversión
+              en el mercado inmobiliario.
             </p>
             <a href="index.html#about-sec" class="btn anim-btn rounded-pill scroll">CONOCE MÁS
               <span></span><span></span><span></span><span></span>
@@ -72,73 +77,7 @@
 </section>
 <!--SLider sec End-->
 
-<!--About sec start-->
-<section class="about-sec" id="about-sec">
-  <div class="about-overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-lg-6 services-area padding-top padding-bottom">
-        <div class="purple-overlay"></div>
-        <div class="row no-gutters wow fadeInLeft">
-          <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/almaviva">
-              <div class="service-card">
-                <div class="icon-holder">
-                  <i class="lni lni-briefcase"></i>
-                </div>
-                <h4 class="card-heading">ALMAVIVA</h4>
-              </div>
-            </a>
 
-          </div>
-          <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/terraviva">
-              <div class="service-card">
-                <div class="icon-holder">
-                  <i class="lni lni-briefcase"></i>
-                </div>
-                <h4 class="card-heading">TERRAVIVA</h4>
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/dam">
-              <div class="service-card">
-                <div class="icon-holder">
-                  <i class="lni lni-briefcase"></i>
-                </div>
-                <h4 class="card-heading">DAM</h4>
-              </div>
-            </a>
-          </div>
-          <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/bio">
-              <div class="service-card">
-                <div class="icon-holder">
-                  <i class="lni lni-briefcase"></i>
-                </div>
-                <h4 class="card-heading">ACERCA DE MG</h4>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-6 about-area padding-top padding-bottom text-center text-lg-left">
-        <div class="about-content wow fadeInRight">
-          <div class="about-inner-content">
-            <h4 class="heading">SOMOS<span class="text-yellow">INVERSIONES INMOBILIARIAS MG</span></h4>
-            <p class="text">
-              <b>IMG</b> Es una empresa con objetivo de asesoría, innovación y comercialización en Bienes y Raíces que opera en
-              estados de alta plusvalía y alto crecimiento económico.
-            </p>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--About sec End-->
 
 
 <!--Scroll Top Start-->
