--- a/src/app/pages/desarrollo/desarrollo.component.html
+++ b/src/app/pages/desarrollo/desarrollo.component.html
@@ -6,11 +6,11 @@
       <div class="inner-overlay"></div>
       <div class="col-12 col-lg-6 d-flex align-items-center text-center text-lg-left">
         <div class="inner-slider-content">
-          <h4>SANTA CLARA ECOVILLAGE </h4>
+          <h4>{{desarrollo.titulo}} </h4>
         </div>
       </div>
       <div class="col-12 col-lg-6" data-depth="0.1">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0a/7c/b7/db/piscina-praia.jpg">
+        <img [src]="desarrollo.portada.data.attributes.url">
       </div>
     </div>
   </div>
