--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -29,7 +29,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active"><a class="nav-link home link" routerLink="/"><span>0</span><span data-count="1" class="num-nav">1</span><span>.</span>INICIO</a></li>
-                  <li class="nav-item"><a class="nav-link scroll link" href="index.html#about-sec"><span>0</span><span data-count="2" class="num-nav">2</span><span>.</span>ACERCA DE</a></li>
+                  <li class="nav-item"><a class="nav-link scroll link" href="acerca-de"><span>0</span><span data-count="2" class="num-nav">2</span><span>.</span>ACERCA DE</a></li>
                   <li class="nav-item"><a class="nav-link scroll link" routerLink="/desarrollos"><span>0</span><span data-count="3" class="num-nav">3</span><span>.</span>DESARROLLOS</a></li>
                   <li class="nav-item"><a class="nav-link scroll link" routerLink="/yucatan"><span>0</span><span data-count="4" class="num-nav">4</span><span>.</span>YUCATAN</a></li>
                   <li class="nav-item"><a class="nav-link scroll link" routerLink="/bio"><span>0</span><span data-count="5" class="num-nav">5</span><span>.</span>BIO</a></li>
@@ -65,10 +65,10 @@
                   <a class="nav-link scroll" routerLink="/inicio">INICIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" routerLink="/inicio#about-sec">ACERCA DE</a>
+                  <a class="nav-link scroll" routerLink="/acerca-de">ACERCA DE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" routerLink="/desarrollos">DESARROLLOS</a>
+                  <a class="nav-link scroll" routerLink="/desarrollo">DESARROLLOS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link scroll" routerLink="/yucatan">YUCATAN</a>
