--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+/*@import '~swiper/swiper-bundle.min.css';*/
+/*@import "~swiper/modules/effect-coverflow/effect-coverflow.min.css";*/
+
