--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -68,7 +68,7 @@
                   <a class="nav-link scroll" routerLink="/acerca-de">ACERCA DE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link scroll" routerLink="/desarrollo">DESARROLLOS</a>
+                  <a class="nav-link scroll" routerLink="/desarrollos">DESARROLLOS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link scroll" routerLink="/yucatan">YUCATAN</a>
