--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -7,7 +7,7 @@
         <div class="purple-overlay"></div>
         <div class="row no-gutters wow fadeInLeft">
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/almaviva">
+            <a routerLink="/desarrollos">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -18,7 +18,7 @@
 
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/terraviva">
+            <a routerLink="/desarrollos">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -28,7 +28,7 @@
             </a>
           </div>
           <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/dam">
+            <a routerLink="/desarrollos">
               <div class="service-card">
                 <div class="icon-holder">
                   <i class="lni lni-briefcase"></i>
@@ -37,16 +37,16 @@
               </div>
             </a>
           </div>
-          <div class="col-12 col-lg-6 services text-center">
-            <a routerLink="/desarrollos/bio">
-              <div class="service-card">
-                <div class="icon-holder">
-                  <i class="lni lni-briefcase"></i>
-                </div>
-                <h4 class="card-heading">ACERCA DE MG</h4>
-              </div>
-            </a>
-          </div>
+<!--          <div class="col-12 col-lg-6 services text-center">-->
+<!--            <a routerLink="/acerca-de">-->
+<!--              <div class="service-card">-->
+<!--                <div class="icon-holder">-->
+<!--                  <i class="lni lni-briefcase"></i>-->
+<!--                </div>-->
+<!--                <h4 class="card-heading">ACERCA DE MG</h4>-->
+<!--              </div>-->
+<!--            </a>-->
+<!--          </div>-->
         </div>
       </div>
       <div class="col-12 col-lg-6 about-area padding-top padding-bottom text-center text-lg-left">
