--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="slider-img col-12 col-lg-6 wow fadeInRight" data-wow-delay=".8s" data-depth="0.1">
         <div class="img-slide" style="height:500px; ">
-          <img src="assets/img/mon.JPG" style="object-fit:cover; padding-bottom: 200px">
+          <img src="assets/img/mon2.JPG" style="object-fit:cover; padding-bottom: 200px" alt="">
         </div>
 
       </div>
