--- a/src/app/pages/yucatan/yucatan.component.html
+++ b/src/app/pages/yucatan/yucatan.component.html
@@ -31,7 +31,7 @@
                     <span></span>
                   </div>
                   <div class="hover-text">
-                    <h4 class="p-hover-title">Creative</h4>
+                    <h4 class="p-hover-title">YUCATAN</h4>
                     <p class="p-hover-des">35 WP Anniversary</p>
                   </div>
                 </div>
